--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
     .remove-btn:hover {
       background-color: #800000;
     }
-    /* Hide the concrete reinforcement options by default */
+    /* Hide concrete reinforcement options by default */
     #concrete-reinf-options {
       display: none;
     }
@@ -263,27 +263,39 @@
               <input type="number" step="0.000001" class="form-control" name="effective_depth" id="effective_depth" value="{{ form_data.get('effective_depth','') }}">
             </div>
           </div>
-          <!-- New Concrete Reinforcement Options (only visible when material = Concrete) -->
+          <!-- New Concrete Reinforcement Options -->
           <div id="concrete-reinf-options" class="mb-3">
             <h5>Concrete Reinforcement Details</h5>
             <div class="row mb-3">
               <div class="col">
                 <label for="bar_diameter" class="form-label">Bar Diameter (mm):</label>
-                <input type="number" step="0.000001" class="form-control" name="bar_diameter" id="bar_diameter" value="{{ form_data.get('bar_diameter','16') }}">
+                <select class="form-select" name="bar_diameter" id="bar_diameter">
+                  {% for size in [8, 10, 12, 16, 20, 25, 28, 32, 36, 40] %}
+                    <option value="{{ size }}" {% if form_data.get('bar_diameter','16')|int == size %}selected{% endif %}>{{ size }} mm</option>
+                  {% endfor %}
+                </select>
               </div>
               <div class="col">
                 <label for="bar_spacing" class="form-label">Bar Spacing (mm):</label>
-                <input type="number" step="0.000001" class="form-control" name="bar_spacing" id="bar_spacing" value="{{ form_data.get('bar_spacing','150') }}">
+                <input type="number" step="0.000001" class="form-control" name="bar_spacing" id="bar_spacing" value="{{ form_data.get('bar_spacing','150') }}" max="500">
               </div>
             </div>
             <div class="row mb-3">
               <div class="col">
                 <label for="concrete_cover" class="form-label">Concrete Cover (mm):</label>
-                <input type="number" step="0.000001" class="form-control" name="concrete_cover" id="concrete_cover" value="{{ form_data.get('concrete_cover','40') }}">
+                <select class="form-select" name="concrete_cover" id="concrete_cover">
+                  {% for cover in range(20, 105, 5) %}
+                    <option value="{{ cover }}" {% if form_data.get('concrete_cover','40')|int == cover %}selected{% endif %}>{{ cover }} mm</option>
+                  {% endfor %}
+                </select>
               </div>
               <div class="col">
                 <label for="reinforcement_grade" class="form-label">Reinforcement Grade:</label>
-                <input type="text" class="form-control" name="reinforcement_grade" id="reinforcement_grade" value="{{ form_data.get('reinforcement_grade','B500') }}">
+                <select class="form-select" name="reinforcement_grade" id="reinforcement_grade">
+                  <option value="B500A" {% if form_data.get('reinforcement_grade','B500') == "B500A" %}selected{% endif %}>B500A</option>
+                  <option value="B500B" {% if form_data.get('reinforcement_grade','B500') == "B500B" %}selected{% endif %}>B500B</option>
+                  <option value="B500C" {% if form_data.get('reinforcement_grade','B500') == "B500C" %}selected{% endif %}>B500C</option>
+                </select>
               </div>
               <div class="col">
                 <label for="reinforcement_strength" class="form-label">Reinforcement Strength (MPa):</label>
